sass/components/_card.sass
.card
  background: var(--secondary-bg-color)
  box-shadow: 10px 10px 0px var(--darker-bg-color), 10px 10px 0px 3px var(--card-border-color), 7px 7px 15px 3px var(--card-shadow-color)
  border: 3px solid var(--card-border-color)
  border-radius: 12px
  max-width: 700px

